beautify + fix search z-indexing + add takana support

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -78,7 +78,7 @@ img {
 	padding: 0 15%;
 	width: 100%;
 	height: 100%;
-
+	z-index: 999;
 }
 
 .search.js-hide {
